cif/org.eclipse.escet.cif.tests/tests/plcgen/prechecker.cif.s7-400.err
WARNING: Maximum real type size supported by the PLC is less than the CIF real type size. Some values in the program may be truncated.
ERROR: CIF PLC code generator failed due to unsatisfied preconditions:

  ----------------------------------------------------------------------------------------
  (1/4) Continuous variable is initialized to, assigned, or compared to, a negative value.
  ----------------------------------------------------------------------------------------
   * In continuous variable "X.e":
     - cont e = -1.0 der -1.0;
                ^

  ---------------------------------------------------------------------------
  (2/4) Continuous variable must have a derivative that is either -1 or -1.0.
  ---------------------------------------------------------------------------
   * In continuous variable "X.c":
     - cont c = 3.0 der 0.0;
                        ^

  ----------------------------------------------------------------------------------------------------------------------------------------
  (3/4) Continuous variable value is not compared as "variable <= ..." or "... >= variable", nor assigned in a single-variable assignment.
  ----------------------------------------------------------------------------------------------------------------------------------------
   * In location "X.a":
     - edge when c >= 0;
                 ^
     - edge when c > 0;
                 ^
     - edge when c < 0;
                 ^
     - edge when c != 0.0;
                 ^
     - edge when c = 0.0 do c := 3.0;
                 ^
     - edge when max(c + 5.0, 17.4) <= 28;
                     ^
     - edge when abs(c) > 0;
                     ^

  ---------------------------------------
  (4/4) Edge has an implicit 'tau' event.
  ---------------------------------------
   * In location "X.a":
     - edge when c >= 0;
       ^
     - edge when c > 0;
       ^
     - edge when c < 0;
       ^
     - edge when c <= 0;
       ^
     - edge when c != 0.0;
       ^
     - edge when c = 0.0 do c := 3.0;
       ^
     - edge when max(c + 5.0, 17.4) <= 28;
       ^
     - edge when abs(c) > 0;
       ^
